# haskell-project-structure

./: .gitignore  CHANGELOG.md  Makefile  README.md  haskell-caesar.cabal
.github/workflows/: haskell.yml
app/: Main.hs
lib/: Caesar.hs
lib/Data/Alphabet/: Alphabet.hs
test/: CaesarSpec.hs
test-integration/: TestHttpSpec.hs
test-integration/test-server/: CaesarServer.hs  Dockerfile
test/Data/Alphabet/: AlphabetSpec.hs
